# sdk

./: .gitignore  .lintstagedrc.json  .mailmap  CODE_OF_CONDUCT.md  CONTRIBUTING.MD  GOVERNANCE.MD  LICENSE  README.md  SDK_UPDATE_PLAN.md  write_snapshots_ref.py
.github/workflows/: javascript-ci.yml  python-ci.yml
backend/api_gateway/: inverter_telemetry_api.json  ooda_terminal_api.json  partner_api.yaml
backend/iam/: inverterTelemetryApi-policy.json  oodaTerminalApi-policy.json  partner_api_role.json
backend/inverter_telemetry_api/: auth.py  db.py  handler.py  rate_limit.py  validators.py
backend/ooda_terminal_api/: __init__.py  auth.py  db.py  handler.py  rate_limit.py  validators.py
backend/partner_api/: Dockerfile  auth.py  lambda_handler.py  rate_limit.py  validators.py
backend/tests/: test_auth.py  test_handler.py  test_partner_api_handler.py
docs/schemas/: EdgeDevice.json  ForecastResponse.json  ForecastSnapshot.json  GapDetectionRequest.json  GapDetectionResponse.json  KPIRollup.json  MaintenanceSchedule.json  MaintenanceSignals.json  ODSERecord.json  StandardizedTelemetry.json  TerminalAssetAddRequest.json  TerminalForecastRequest.json  TerminalForecastResponse.json  TerminalInterpolationRequest.json  TerminalInterpolationResponse.json  (+6 more)
javascript/: .eslintrc.json  .gitignore  .npmignore  README.md  package.json
python/: LICENSE  README.md  pyproject.toml  setup.py
python/examples/: complete_workflow_example.py  edge_device_example.py  energy_analyst_example.py  forecasting_example.py  freemium_forecast_example.py  inverter_telemetry_example.py  ooda_terminal_example.py  partner_api_example.py  terminal_ooda_example.py
python/ona_platform/: __init__.py  client.py  config.py  exceptions.py
python/ona_platform/models/: __init__.py  intelligence.py  ml.py  odse.py  ooda.py  snapshots.py  telemetry.py
python/ona_platform/services/: __init__.py  auth.py  base.py  data_ingestion.py  edge_device.py  energy_analyst.py  enphase.py  forecasting.py  freemium_forecast.py  gap_detection.py  huawei.py  interpolation.py  inverter_telemetry.py  ooda_cursor.py  ooda_terminal.py  partner_api.py  standardization.py  telemetry_cursor.py  terminal.py  training.py  weather.py
python/ona_platform/utils/: __init__.py  logger.py  retry.py  validation.py
python/tests/: __init__.py  test_auth_client.py  test_client.py  test_freemium_forecast_client.py  test_inverter_telemetry_client.py  test_odse_full_schema_behavioral.py  test_partner_api_client.py  test_telemetry_cursor.py  test_telemetry_models.py  test_terminal_client.py  test_terminal_intelligence.py  test_validation.py
(+38 files in other folders)
