[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ona-platform"
version = "1.0.0"
description = "Python SDK for Ona Energy Management Platform"
readme = "README.md"
authors = [
    {name = "Asoba Energy", email = "info@asoba.co"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "boto3>=1.28.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "hypothesis>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/AsobaCloud/platform"
Documentation = "https://github.com/AsobaCloud/platform/tree/main/sdk/python"
Repository = "https://github.com/AsobaCloud/platform"

[tool.ruff]
# Target the minimum supported Python version
target-version = "py38"
line-length = 100

[tool.ruff.lint]
# Enable a broad but practical rule set:
#   E/W  – pycodestyle errors and warnings
#   F    – Pyflakes (undefined names, unused imports, etc.)
#   I    – isort (import ordering)
#   UP   – pyupgrade (modernise syntax)
#   B    – flake8-bugbear (likely bugs and design issues)
#   C4   – flake8-comprehensions (unnecessary comprehensions)
#   SIM  – flake8-simplify (simplifiable code patterns)
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line-too-long — enforced by the formatter instead
    "UP007",  # use X | Y for union types — not available in Python 3.8
    "UP006",  # use type instead of Type — not available in Python 3.8
]

[tool.ruff.lint.isort]
known-first-party = ["ona_platform"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
